--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,16 +8,17 @@ sonar.projectVersion=1.0
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/CamFlow/mqtt-publisher-service
-sonar.links.ci=https://travis-ci.org/CamFlow/mqtt-publisher-service
-sonar.links.scm=https://github.com/CamFlow/mqtt-publisher-service
-sonar.links.issue=https://github.com/CamFlow/mqtt-publisher-service/issues
+sonar.links.homepage=https://github.com/CamFlow/camflow-service
+sonar.links.ci=https://travis-ci.org/CamFlow/camflow-service
+sonar.links.scm=https://github.com/CamFlow/camflow-service
+sonar.links.issue=https://github.com/CamFlow/camflow-service/issues
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
 # If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
 sonar.sources=./src
+sonar.sources=./include
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
