--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=camflow:mqtt
+sonar.projectKey=camflow:service
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=CamFlow MQTT Publisher
+sonar.projectName=CamFlow Service
 sonar.projectVersion=1.0
 
 # =====================================================
