fix sonar bit hopefully

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,8 +17,13 @@ sonar.links.issue=https://github.com/CamFlow/camflow-service/issues
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
 # If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
-sonar.sources=./src
-sonar.sources=./include
+sonar.modules=sources,headers
+sources.sonar.name=Sources
+sources.sonar.projectBaseDir=.
+sources.sonar.sources=./src
+headers.sonar.name=Headers
+headers.sonar.projectBaseDir=.
+headers.sonar.sources=./include
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
