--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=camflow:service
+sonar.projectKey=camflow:mqtt
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=CamFlow Service
-sonar.projectVersion=1.0
+sonar.projectVersion=1.1
 
 # =====================================================
 #   Meta-data for the project
