--- a/camflow-mqtt-withmosquitto.ini
+++ b/camflow-mqtt-withmosquitto.ini
@@ -1,9 +1,10 @@
+[general]
+output=mqtt
+log=/tmp/audit.log
+
 [mqtt]
 address=tcp://localhost:1883
 username=camflow
 password=test
 ; message delivered: 0 at most once, 1 at least once, 2 exactly once
 qos=2
-
-[taint]
-test=1
