--- a/src/Makefile
+++ b/src/Makefile
@@ -11,13 +11,13 @@ debug:
 	$(CCC) $(INCLUDES) service.c $(LIB) -o service.o $(CCFLAGS) -g
 
 install:
-	cp --force ./service.o /usr/bin/camflow-provenance
+	cp --force ./service.o /usr/bin/camflowd
 	mkdir -p /var/relay
-	cp --force ./camflow-provenance.service /etc/systemd/system/camflow-provenance.service
-	systemctl enable camflow-provenance.service
+	cp --force ./camflowd.service /etc/systemd/system/camflowd.service
+	systemctl enable camflowd.service
 
 restart:
-	systemctl restart camflow-provenance.service
+	systemctl restart camflowd.service
 
 clean:
 	rm -f service.o
