--- a/src/camflowd.service
+++ b/src/camflowd.service
@@ -1,13 +1,13 @@
 [Unit]
 Description=CamFlow provenance service
-Requires=camflow-config.service
-After=camflow-config.service
+Requires=camconfigd.service
+After=camconfigd.service
 Wants=network-online.target
 After=network-online.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/camflow-provenance
+ExecStart=/usr/bin/camflowd
 Restart=always
 
 [Install]
