--- a/src/camflowd.service
+++ b/src/camflowd.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=CamFlow provenance service
-Requires=camconfigd.service
-After=camconfigd.service
+Requires=camconfd.service
+After=camconfd.service
 Wants=network-online.target
 After=network-online.target
 
