structure to support writting provenance to unix socket

--- a/camflowd.ini
+++ b/camflowd.ini
@@ -1,10 +1,12 @@
 [general]
-; used for test and debug purpose
 ; output=null
 ; output=mqtt
+; output=unix_socket
 output=log
-format=spade_json
+
 ;format=w3c
+format=spade_json
+
 log=/tmp/audit.log
 
 [mqtt]
