can write provenance to unix socket

--- a/camflowd.ini
+++ b/camflowd.ini
@@ -15,3 +15,7 @@ username=camflow
 password=test
 ; message delivered: 0 at most once, 1 at least once, 2 exactly once
 qos=2
+
+
+[unix]
+address=/tmp/camflowd.sock
