add support for named pipe

--- a/camflowd.ini
+++ b/camflowd.ini
@@ -2,6 +2,7 @@
 ; output=null
 ; output=mqtt
 ; output=unix_socket
+; output=fifo
 output=log
 
 ;format=w3c
@@ -19,3 +20,6 @@ qos=2
 
 [unix]
 address=/tmp/camflowd.sock
+
+[pipe]
+path=/tmp/camflowd-pipe
