minor tweak to configuration file + default config

--- a/camflowd.ini
+++ b/camflowd.ini
@@ -5,10 +5,11 @@
 ; output=fifo
 output=log
 
-;format=w3c
-format=spade_json
+format=w3c
+;format=spade_json
 
-log=/tmp/audit.log
+[log]
+path=/tmp/audit.log
 
 [mqtt]
 address=m12.cloudmqtt.com:17065
