make mqtt topic a configuration option

--- a/camflowd.ini
+++ b/camflowd.ini
@@ -17,6 +17,8 @@ username=camflow
 password=test
 ; message delivered: 0 at most once, 1 at least once, 2 exactly once
 qos=2
+; topic, provided prefix + machine_id (e.g. camflow/provenance/1234)
+topic=camflow/provenance/
 
 [unix]
 address=/tmp/camflowd.sock
