--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ before_install:
   - sudo apt-get update -qq
 
 script:
-  - make prepare
-  - make all
+  - echo 'TODO'
 
 notifications:
   slack: camflow:T3Umf9cAIwKnaxFEkjeZV7RM
